tests/fixtures/positive/naming/TopLevelPropertyNaming.kt
package com.example.naming

const val bad_name = 1
const val anotherBadConst = "wrong"

val _topLevelBad = 42
