tests/fixtures/negative/naming/TopLevelPropertyNaming.kt
package com.example.naming

const val GOOD_NAME = 1
const val ANOTHER_CONST = "correct"

val topLevelProperty = 42
